# harness-core

./: .gitignore  AGENTS.md  README.md  USAGE.md  conftest.py  pyproject.toml
.claude/: settings.json
.claude/commands/: harness-execute.md  harness-full.md  harness-review.md
.harness/: check_active_tasks.py  config.yaml  run_hook.py
.harness/claude_prompts/: 19e2457b2c0.md
docs/: contributing-anti-patterns.md  upgrade-0.2.0.md  visual_audit_assertions.md
docs/tasks/: 20260513_anti-patterns_+_core_modules_check.md  20260513_harness_0.3_全面优化-5_项.md  20260514_regression_+_template_verify_suite.md
harness/: __init__.py  cli.py  config.py  reporter.py  router.py
harness/adapters/: __init__.py
harness/adapters/claude_code/: __init__.py  active_tasks_helper.py  install_hooks.py
harness/execute/: __init__.py  launcher.py
harness/languages/: __init__.py  base.py
harness/llm/: __init__.py  base.py
harness/plan/: __init__.py  template.py  validator.py
harness/review/: __init__.py  diff_packager.py  prompt_template.md  runner.py
harness/skills/: __init__.py
harness/validate/: __init__.py  anti_patterns.py  cache.py  circuit_breaker.py  core_modules.py  gate.py  runner.py
harness/verify/: __init__.py  cli.py  matchers.py  report.py  runner.py
scripts/: emit_verify_prompts.py  score_verify.py
tests/: test_active_tasks_stop_hook.py  test_adapters.py  test_anti_patterns.py  test_anti_patterns_ignore.py  test_baseline.py  test_baseline_v02.py  test_cli_check.py  test_cli_init.py  test_config.py  test_core_modules.py  test_dart_parser.py  test_data_invariant.py  test_data_invariant_e2e.py  test_execute.py  test_plan.py  test_precommit_adapter.py  test_reporter.py  test_review.py  test_review_data_json.py  test_review_response_file.py  test_review_template.py  test_router.py  test_script_invariant.py  test_script_invariant_e2e.py  test_validate.py  test_validator_blindspots.py  test_verify_cli.py  test_verify_fixtures_packaged.py  test_verify_prompt_isolation.py  test_visual_audit_assertions.py  test_visual_audit_fail_on.py  test_visual_audit_gbk_console.py
tests/test_languages/: test_dart.py  test_fallback.py  test_python.py  test_unity_csharp.py
tests/test_llm/: test_providers.py
(+100 files in other folders)
