[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-core"
version = "0.1.0"
description = "AI-assisted development harness: plan/execute/review/validate lifecycle"
authors = [{ name = "jinzhe" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
