[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-core"
version = "0.4.0"
description = "AI-assisted development harness: plan/execute/review/validate lifecycle"
authors = [{ name = "jinzhe" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]
# 渲染后 UI 抓取：baseline URL 模式 + visual-audit 都用 playwright（惰性导入，opt-in）。
# 装后还需 `playwright install chromium`。
playwright = [
    "playwright>=1.40",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"harness.review" = ["prompt_template.md"]
"harness.adapters.claude_code" = ["commands/*.md"]
# skill 资源（SKILL.md 等）：必须显式声明，否则 wheel 不打包，
# pip install 后 .claude/skills/<name>/ 缺 SKILL.md，
# Claude Code 识别不到 skill（识别靠 SKILL.md frontmatter），
# 导致 /harness-baseline 等 slash command 在新会话不可见
"harness.skills" = ["**/SKILL.md", "**/*.json", "**/*.yaml", "**/*.yml"]
# verify 自检 fixtures：必须随包发，否则 pip 装完 `harness verify` 报 No fixtures found
"harness.verify" = ["fixtures/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures", ".git", "__pycache__", "*.egg-info", ".tox", "dist", "build"]
